force-app/main/default/objects/sfdcJuice_Config__mdt/sfdcJuice_Config__mdt.object-meta.xml
<CustomObject>
    <label>sfdcJuice Config</label>
    <pluralLabel>sfdcJuice Configs</pluralLabel>
    <description>Configuration metadata for sfdcJuice integration settings</description>
</CustomObject>