force-app/main/default/objects/sfdcJuice_Config__mdt/fields/Helpjuice_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Helpjuice_API_Key__c</fullName>
    <label>Helpjuice API Key</label>
    <type>Text</type>
    <length>255</length>
    <description>API key for authenticating with Helpjuice API v3</description>
</CustomField>