force-app/main/default/objects/sfdcJuice_Config__mdt/fields/Helpjuice_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Helpjuice_Base_URL__c</fullName>
    <label>Helpjuice Base URL</label>
    <type>Url</type>
    <description>Base URL for Helpjuice account (e.g., https://youraccount.helpjuice.com)</description>
</CustomField>