force-app/main/default/objects/sfdcJuice_Config__mdt/fields/Max_Results_Per_Source__c.field-meta.xml
<CustomField>
    <fullName>Max_Results_Per_Source__c</fullName>
    <label>Max Results Per Source</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>25</defaultValue>
    <description>Maximum number of results to return per source (Helpjuice or Salesforce)</description>
</CustomField>