force-app/main/default/objects/sfdcJuice_Config__mdt/fields/Named_Credential_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential_Name__c</fullName>
    <label>Named Credential Name</label>
    <type>Text</type>
    <length>80</length>
    <description>Name of the Named Credential to use for Helpjuice API calls. This should match the API Name of the Named Credential (e.g., "Helpjuice_API"). The API key should be configured in the Named Credential's Identity section as a custom header named "Authorization".</description>
</CustomField>