force-app/main/default/objects/sfdcJuice_Config__mdt/fields/Request_Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Request_Timeout_Seconds__c</fullName>
    <label>Request Timeout (Seconds)</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
    <defaultValue>30</defaultValue>
    <description>HTTP request timeout in seconds for Helpjuice API calls</description>
</CustomField>